--- a/cirDraw/static/base/css/circCirc.css
+++ b/cirDraw/static/base/css/circCirc.css
@@ -432,4 +432,9 @@ input.hint {
           transform: rotate(360deg);
         }
       }
-      
+     
+
+ .clickdelete:hover {
+  color: yellow;
+  cursor: pointer;
+} 
