--- a/cirDraw/templates/base.html
+++ b/cirDraw/templates/base.html
@@ -86,8 +86,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <img src="{% static 'base/img/cmu_scs_logo.gif' %}" width="20%">
-          <img src="{% static 'base/img/151-1515387_tap-bird-flappy-bird-tap-tweety-flappy-bird.png' %}" width="30%">
+          <img src="{% static 'base/img/cmu_scs_logo.gif' %}" width="10%">
+          <img src="{% static 'base/img/151-1515387_tap-bird-flappy-bird-tap-tweety-flappy-bird.png' %}" width="10%">
+
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -107,6 +108,9 @@
         <div class="col-md-4">
         
           
+	  <span>Carnegie Mellon University</span>
+	  <p>Pittsburgh, 15213</p>
+
         </div>
       </div>
     </div>
