--- a/cirDraw/tools/templates/tools/upload.html
+++ b/cirDraw/tools/templates/tools/upload.html
@@ -32,7 +32,7 @@
 
         <label class="inlineText">Youtube ID:</label>
         <input type="text" id="youtube" name="youtube">
-        <label class="inlineText">(How to Get? Click Here for Help)</label>
+	<label class="inlineText">(How to Get? See <a href="https://www.youtube.com/watch?v=1oN4XISnKic" target="_blank">Here</a> for details)</label>
       {% csrf_token %}
       </form>
       <br>
