--- a/cirDraw/tools/templates/tools/upload.html
+++ b/cirDraw/tools/templates/tools/upload.html
@@ -28,7 +28,7 @@
       <option>Category 3</option>
     </select>
     <div>
-      <form action="" method="post" id="">
+      <form action="" method="post" id="youtubeForm" onsubmit="return validateYouTubeForm()">
 
         <label class="inlineText">Youtube ID:</label>
         <input type="text" id="youtube" name="youtube">
@@ -36,9 +36,9 @@
       {% csrf_token %}
       </form>
       <br>
-      <form action="" method="post" id="">
+      <form action="" method="post" id="neuronForm" onsubmit="return validateNeuronForm()">
 
-        <label class="inlineText">Number of Neurons:</label>
+        <label class="inlineText">Number of Parameters:</label>
         <input type="text" id="num_nn" name="num_nn">
         <label class="inlineText">(Self-Report)</label>
       {% csrf_token %}
@@ -95,7 +95,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css" integrity="sha256-e47xOkXs1JXFbjjpoRr1/LhVcqSzRmGmPqsrUQeVs+g=" crossorigin="anonymous" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js" integrity="sha256-cs4thShDfjkqFGk5s2Lxj35sgSRr4MRcyccmi0WKqCM=" crossorigin="anonymous"></script>
 -->
+<script src="{% static 'tools/js/mat4js.read.min.js' %}"></script>
+
 
 <script src="{% static 'tools/js/upload.js' %}"></script>
+
 
 {% endblock %}
